2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>

	* lib/tarfn.c (TarExtractor): Initialize h.LinkName and h.Name to
	NULL.

2008-03-16  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/Objdump.pm: Add "objid" property to
	symbols and fake "soname" property with the basename of the
	object's filename if the object has no official SONAME.
	* scripts/dpkg-shlibdeps.pl: Add some more debugging messages.
	* scripts/dpkg-shlibdeps.pl: Also count usage of alternate sonames
	for symbols found in symbols files.

2008-03-16  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_HEADERS): Add 'libintl.h'.
	* lib/gettext.h [!ENABLE_NLS]: Use HAVE_LIBINTL_H instead of
	'(__GLIBC__ >= 2)'.

2008-03-15  Erast Benson  <erast@gnusolaris.org>

	* utils/start-stop-daemon.c (check): Move 'return' inside preprocessor
	conditionals, so that it does not just return on non-handled OSes.

2008-03-15  Erast Benson  <erast@gnusolaris.org>

	* utils/start-stop-daemon.c: Use __sun instead of __sparc__ to
	define OSsunos.

2008-03-15  Raphael Hertzog  <hertzog@debian.org>

	* debian/dpkg.prerm: Removed as it's empty.
	* Makefile.am: Remove debian/dpkg.prerm from EXTRA_DIST.

2008-03-14  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Changelog/Debian.pm: Fix regression by re-allowing
	capitals (like UNRELEASED!) in the distribution/package name.
	* scripts/t/600_Dpkg_Changelog/regressions: Add capitals in the
	distribution name as part of the non-regression tests.

2008-03-11  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* lib/showcright.c: Rename to ...
	* lib/myopt-util.c: ... this.
	* lib/Makefile.am (libdpkg_a_SOURCES): Rename 'showcright.c' to
	'myopt-util.c'.

	* lib/dpkg.h (struct cmdinfo): Remove declaration.
	(showcopyright): Move prototype to ...
	* lib/myopt-util.c: ... here.
	(helponly, versiononly): New functions.
	* lib/myopt.h: Include <dpkg-def.h>.