@@ -1,5 +1,11 @@
 2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>
 
+	* lib/dpkg-db.h (modstatdb_checkpoint): New prototype.
+	* lib/dbmodify.c (checkpoint):  Remove static keyword. Rename to ...
+	(modstatdb_checkpoint): ... this. Fix all callers.
+
+2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>
+
 	* lib/tarfn.c (TarExtractor): Initialize h.LinkName and h.Name to
 	NULL.
 
